# linux-device-manager

./: .gitignore  CMakeLists.txt  package.json
i18n/: lang.ts  main.ts
src/: lang.ts  main.cpp
src/backend/: backend.cpp  backend.hpp
src/gui/: gui.cpp  gui.hpp
src/i18n/: .cpp  .hpp  i18n.cpp  i18n.hpp
src/model/: model.cpp  model.hpp
tools/: i18n-parser.ts  utils.ts
